# tech-insight

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.e2e.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/techinsight/: main.py
backend/src/techinsight/api/: deps.py  routes.py  schemas.py
backend/src/techinsight/application/: articles.py  bootstrap.py  search.py
backend/src/techinsight/config/: settings.py
backend/src/techinsight/domain/: query.py
backend/src/techinsight/infrastructure/: db.py  models.py
backend/src/techinsight/infrastructure/embeddings/: base.py  factory.py  helpers.py  qwen.py
backend/src/techinsight/tasks/: bootstrap.py  package_vectors.py
backend/tests/: test_api_routes.py  test_domain_query.py  test_search_service.py
backend/tests/e2e/: crud_api.py
database/fixtures/vector-cache/: qwen-manifest.json
database/migrations/: 001_init.sql
docs/: api.md  architecture.md  db.md
frontend/: Dockerfile  README.md  package.json
frontend/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/src/app/api/backend/[...path]/: route.ts
frontend/src/app/articles/[id]/: page.tsx
frontend/src/app/articles/[id]/[slug]/: page.tsx
frontend/src/components/: article-detail-page.tsx  article-form-dialog.tsx  providers.tsx  techinsight-dashboard.tsx
frontend/src/lib/: api.ts  article-path.ts  types.ts
